--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: python
     pythonVersion: 3.11.9
     buildCommand: pip install --upgrade pip && pip install -r requirements.txt
-    startCommand: python manage.py migrate && python manage.py init_superuser || true && gunicorn teddybridge.wsgi:application
+    startCommand: python manage.py migrate --noinput && (python manage.py init_superuser || true) && gunicorn teddybridge.wsgi:application --bind 0.0.0.0:$PORT
     envVars:
       - key: DJANGO_SECRET_KEY
         sync: false
